projects/nx/src/apps/nx-sso/live/production/yaldap-netpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: yaldap-sso
    app.kubernetes.io/name: yaldap
    app.kubernetes.io/part-of: sso
    app.kubernetes.io/version: v0.2.0
  name: yaldap
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: yaldap-sso
      app.kubernetes.io/name: yaldap
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: authelia-sso
              app.kubernetes.io/name: authelia
      ports:
        - port: 8389
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: traefik-kube-system
              app.kubernetes.io/name: traefik
      ports:
        - port: 8389
  egress: []
